# practice4

./: README.md
my_sum/: requirements_dev.txt  setup.cfg  setup.py
my_sum/mysum/: __about__.py  __main__.py
my_sum/mysum.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
my_sum/mysum/sum/: current.py  fibonacci.py  min_element.py  sum.py  sum_negative.py
my_sum/mysum_venv/: pyvenv.cfg
my_sum/tests/: test_current.py  test_fibonacci.py  test_min.py  test_negative_sum.py  test_sum.py
