[metadata]
name = mysum
version = attr: mysum.__about__.__version__
description = My integer sum calculator
url = 'TODO'
author = attr: mysum.__about__.__author__
author_email = user.name@google.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Arithmetic

[options]
python_requires = ~=3.8
zip_safe = False
packages = find:

[options.extras_require]
test =
    pytest==6.2.4
    pytest-runner==5.3.1
build = 
    wheel==0.42.0

[options.entry_points]
console_scripts =
    sum_ints = mysum.__main__:sum_ints

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bdist_wheel]
universal = 1

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
console_output_style = count
